--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
                 %>
                 <article class="post">
                     <a href="/post/<%= post.slug %>" class="article-link">
-                        <img src="<%= post.yoast_head_json.og_image[0].url %>"></img>
+                        <img src="<%= post.yoast_head_json.og_image[0].url %>" height="<%= post.yoast_head_json.og_image[0].height %>" width="<%= post.yoast_head_json.og_image[0].width %>">
                     </a>
                     <a href="/post/<%= post.slug %>" class="article-link">
                         <h3><%- post.title.rendered %></h3>
