--- a/views/category.ejs
+++ b/views/category.ejs
@@ -1,32 +1,19 @@
 <%- include('./partials/head') %>
-
-<title>Red pers - <%= category.name %> archieven</title>
-
+    <title>Red pers - <%= category.name %> archieven</title>
 </head>
 
-<%- include('./partials/header') %>
 <body>
-
-
-<main>
-
-    <section class="posts">
-    <%
-        posts
-        .forEach((post) => {
-            %>
-            <article class="post">
-                <a href="/post/<%= post.slug %>" class="article-link">
-                    <img src="<%= post.yoast_head_json.og_image[0].url %>"></img>
-                    <h3><%- post.title.rendered %></h3>
-                </a>
-                <a class="author" href="/author/<%= post.author %>"><%= post.yoast_head_json.author %></a>
-            </article>
+    <%- include('./partials/header') %>
+    <main>
+        <div class="posts">
             <%
-        })
-    %>
-    </section>
-
-</main>
-
+                posts
+                .forEach((post) => {
+                    %>
+                        <%- include('./partials/post', {post, showExerpt: false}) %>
+                    <%
+                })
+            %>
+        </div>
+    </main>
 <%- include('./partials/footer') %>
