--- a/public/main.css
+++ b/public/main.css
@@ -158,58 +158,6 @@ header:has(.categories-nav.closed) .menu-button {
     }
 }
 
-/* MAIN */
-
-main {
-    margin: 1rem;
-    margin-top: 15rem;
-}
-
-.posts {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-
-    .post {
-        border: var(--border);
-        max-width: 30rem;
-        height: 33rem;
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        justify-content: start;
-    
-        .article-link {
-            display: block;
-            width: 100%;
-        }
-
-        img {
-            width: 100%;
-            height: 15rem;
-            object-fit: cover;
-            border-bottom: var(--border);
-        }
-
-        .author {
-            padding: 1rem;
-            display: block;
-            font-size: 0.7rem;
-            font-weight: 700;
-            border-top: var(--border);
-            margin-top: auto;
-        }
-
-        h3 {
-            padding-left: 1rem;
-            font-size: x-large;
-            font-weight: 1000;
-        }
-    }
-}
-
 #alert-container {
     position: fixed;
     top: 3rem;
@@ -229,4 +177,135 @@ main {
     background-color: white;
     border-radius: 1rem;
     font-weight: bold;
+}
+
+@media only screen and (min-width: 768px) {
+    
+    .posts {
+        .post {
+            max-width: 22rem;
+        }
+    }
+}
+
+@media only screen and (min-width: 1025px) {
+
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        .header1 {
+            width: 100%;
+            display: block;
+        }
+
+        .header2 {
+            width: calc(100% - 4rem);
+            max-width: calc(80rem - 4rem);
+
+            .date-and-tagline {
+                display: block;
+            }
+        }
+
+        .header3 {
+            width: 100%;
+            max-width: 80rem;
+            
+            .donate-and-newsletter {
+                display: none;
+            }
+            
+            .categories-nav, .categories-nav.closed {
+                position: unset;
+                height: unset;
+                width: calc(100% - 3rem);
+
+                .categories {
+                    height: unset;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: row;
+                    padding: 0.5rem;
+                }
+            }
+        }
+
+        .menu-button {
+            display: none;
+        }
+    }
+
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        main {
+            margin-top: 12rem;
+            width: 100%;
+            max-width: 80rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .posts.front-page {
+                display: grid;
+                grid-template-columns: 22rem 22rem 22rem;
+                grid-template-rows: auto;
+                grid-template-areas:
+                    "a a a"
+                    "b c d";
+                
+                .post:nth-of-type(1) {
+                    grid-area: a;
+                    width: calc(68rem - 2px); /* 3x normal width + 2x gap - 2x border */
+                    max-width: calc(68rem - 2px);
+
+                    display: grid;
+                    grid-template-rows: 30rem 3rem;
+                    grid-template-columns: 22rem 44rem;
+
+                    grid-template-areas: 
+                        "b a"
+                        "c a";
+
+                    *:nth-child(1) {
+                        grid-area: a;
+                    }
+
+                    *:nth-child(2) {
+                        grid-area: b;
+                    }
+
+                    *:nth-child(3) {
+                        grid-area: c;
+                    }
+
+                    p {
+                        font-family: var(--nav-font);
+                        text-transform: none;
+                        margin: 1rem;
+                    }
+
+                    img {
+                        max-height: 100%;
+                        height: 100%;
+                        border-left: var(--border);
+                    }
+                }
+                .post:nth-of-type(2) {
+                    grid-area: b;
+                }
+                .post:nth-of-type(3) {
+                    grid-area: c;
+                }
+                .post:nth-of-type(4) {
+                    grid-area: d;
+                }
+            }
+        }
+    }
 }
