--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/media.css">
+    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/homepage.css">
+    <link rel="icon" href="/assets/redpersFavicon.png">
     <script src="/client.js" defer></script>
     
    
