fix issues #2 #3 #4 and #12

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,8 +20,14 @@
             <p>Podium voor de Journalistiek</p>
         </div>
 
-        <a href="/"><img class="logo" src="/assets/RedPers_Logo_Cmyk_Black.webp" alt="Red Pers logo"></a>
-        
+        <a href="/">
+            <picture>
+                <source width="160" height="38.4" srcset="/assets/RedPers_Logo_Cmyk_Black.avif" type="image/avif">
+                <source width="160" height="38.4" srcset="/assets/RedPers_Logo_Cmyk_Black.webp" type="image/webp">
+                <img width="160" height="38.4" class="logo" src="/assets/RedPers_Logo_Cmyk_Black.png" alt="Red Pers logo">
+            </picture>
+        </a> 
+                
         <button class="search-button"><img src="/assets/icons8-search-32.png" alt="Search button"></button>
     </div>
 
