fixed issue #15 (added dialog)

--- a/views/article.ejs
+++ b/views/article.ejs
@@ -4,9 +4,9 @@
 
 <body>
     <%- include('./partials/header') %>
-    <div id="alert-container" class="hidden">
+    <dialog id="alert-dialog">
         <p id="alert-message"></p>
-    </div>
+    </dialog>
     <main>
         <h3><%- post.title.rendered %></h3>
 
