--- a/views/article.ejs
+++ b/views/article.ejs
@@ -7,6 +7,7 @@
     <dialog id="alert-dialog">
         <p id="alert-message"></p>
     </dialog>
+    <!-- Bron onderaan -->
     <main>
         <h3><%- post.title.rendered %></h3>
 
@@ -18,3 +19,5 @@
         <div class="post-content"><%- post.content.rendered %></div>
     </main>
 <%- include('./partials/footer') %>
+
+<!-- Bron: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/dialog -->
